[package]
name = "processor"
version = "0.1.0"
authors = ["wooq <wooq@nhnnext.org>"]


[dependencies.iron]
version = "*"

[dependencies.time]
version = "*"

[dependencies.router]
version = "*"

[dependencies.bodyparser]
version = "*"

[dependencies.persistent]
version = "*"

[dependencies.interface]
path = "../components/interface"